# mother-daughter-UAVs-autunomous-aerial-docking

./: README.md  errors.py  install_dependencies.sh  trajectories.py
Firmware/: couple_gazebo.sh  four_couple_gazebo.sh  start.sh  wget-log
Firmware/Tools/sitl_gazebo/models/april/: model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/apriltag/: model.sdf
Firmware/Tools/sitl_gazebo/models/feiji/: feiji.sdf  model.config
Firmware/Tools/sitl_gazebo/models/feiji2/: feiji2.sdf  model.config
Firmware/Tools/sitl_gazebo/models/fpv_cam/: fpv_cam.sdf
Firmware/Tools/sitl_gazebo/models/grass_plane/: model.sdf
Firmware/Tools/sitl_gazebo/models/iris_fpv_cam/: iris_fpv_cam.sdf
Firmware/Tools/sitl_gazebo/models/land_mark/: model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/landing_car/: SmartCar3.urdf  model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/mUAV1/: mUAV1.sdf  model.config
Firmware/Tools/sitl_gazebo/models/mUAV2/: mUAV2.sdf  model.config
Firmware/Tools/sitl_gazebo/models/mUAV3/: mUAV3.sdf  model.config
Firmware/Tools/sitl_gazebo/models/mUAV4/: mUAV4.sdf  model.config
Firmware/Tools/sitl_gazebo/models/multi_mark/: model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/multi_mark_small/: model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/my_ground_plane/: model.sdf
Firmware/Tools/sitl_gazebo/models/red_mark/: model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/redtag/: model.config  model.sdf
Firmware/Tools/sitl_gazebo/models/ziji/: model.config  ziji.sdf
Firmware/Tools/sitl_gazebo/models/ziji_cam/: model.config  ziji_cam.sdf
Firmware/Tools/sitl_gazebo/src/: gazebo_mavlink_interface.cpp
Firmware/Tools/sitl_gazebo/worlds/: grass.world  landcar.world  multi_mark.world  zimuji.world
Firmware/launch/: mavros_posix_sitl.launch  multi_uav_mavros_sitl(huan).launch  multi_uav_mavros_sitl.launch  multi_uav_mavros_sitl_couple.launch  posix_sitl.launch  single_vehicle_spawn_iris.launch  single_vehicle_spawn_sdf_mUAV1.launch  single_vehicle_spawn_sdf_mUAV2.launch  single_vehicle_spawn_sdf_mUAV3.launch  single_vehicle_spawn_sdf_mUAV4.launch  zimuji_uav_mavros_sitl.launch
duav_dock/: CMakeLists.txt  package.xml
duav_dock/include/: dUAVDock.h
duav_dock/launch/: both_takeoff_dock.launch  duav_takeoff_dock.launch
duav_dock/msg/: Center.msg  If_dUAV_docked.msg  Marker_find_info.msg
duav_dock/scripts/: track.py
duav_dock/src/: dUAVDock.cpp
kalman_pred/: CMakeLists.txt  package.xml
kalman_pred/include/: kalman_xy_pos.hpp
kalman_pred/launch/: kalman_pred.launch
kalman_pred/src/: kalman_xy_pos.cpp
muav_move/: CMakeLists.txt  package.xml
muav_move/launch/: muavtakeoff.launch
muav_move/src/: mUAVTakeOff.cpp
(+62 files in other folders)
